# a2a_pattern_steward_and_sage

./: .gitignore  README.md  pyproject.toml
demos/01_minimal/: README.md  client.py  server.py
demos/02_viz_comparison/: README.md  claude_cli.py  client.py  render.py  sage_prompt.py  server.py  test_sage_prompt.py  test_scenarios.py
demos/02_viz_comparison/prompts/: sage_system.md
output/: RESULTS.md
scenarios/: consumer_app_engagement.json  marketing_attribution.json  product_line_revenue.json  q4_sales_review.json  series_b_growth.json  team_kpi_profiles.json
