[project]
name = "a2a_pattern_steward_and_sage"
version = "0.1.0"
description = "Two reasoning agents collaborating over a typed MCP boundary, each holding more than the other gets to see"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.8.0",
    "pillow>=10.0.0",
    "seaborn>=0.13.0",
    "pandas>=2.0.0",
    "vl-convert-python>=1.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools]
py-modules = []
